# The-Complete-Agentic-AI-Engineering

./: .env.exemple  .gitignore  pyproject.toml  requirements.in  requirements.txt
.claude/: settings.local.json
Section 1 Week 1/: 1_.ipynb  1_day.ipynb  3_day.ipynb  4_day.ipynb  5_day.ipynb  agentic_ai_exercise_results.txt
Section 2 Week 2/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  deep_research.py  email_agent.py  planner_agents.py  research_manage.py  search_agents.py  writer_agent.py
